bin/testsuite/tests/compiler/src/errors/compiler5503.swg
#global testerror "Err0315"

#[Swag.Mixin]
#test
{
    toto = 0
}
